--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img src="Bikes Sales Screenshot.png">
           <div class="proj1-details">
             <h2>Bikes Sales Dashboard</h2>
-            <p>Build Using Excel</p>
+            <p>Built Using Excel</p>
             <button><a href="https://github.com/ManthanSiwach/Bikes-Sales-Dashboard/blob/main/Excel%20Project%20Dataset.xlsx" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
@@ -130,7 +130,7 @@
           <img src="Data Survey Screenshot.png">
           <div class="proj1-details">
             <h2>Data Professional Survey Breakdown</h2>
-            <p>Build Using PowerBi and Excel</p>
+            <p>Built Using PowerBi and Excel</p>
             <button><a href="https://github.com/ManthanSiwach/Data-Professional-Survey-Breakdown/blob/main/Project.pbix" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
@@ -141,8 +141,19 @@
           <img src="Screenshot 2023-09-23 201444.png">
           <div class="proj1-details">
             <h2>Gym Landing Page</h2>
-            <p>Build Using HTML,CSS and JS</p>
+            <p>Built Using HTML,CSS and JS</p>
             <button><a href="https://manthansiwach.github.io/TWSIP_GymLandingPage/#" target="blank">View source <i
+                  class="fas fa-external-link-alt"></i></a>
+            </button>
+          </div>
+        </div>
+        <br><br>
+         <div class="proj-1">
+          <img src="Krypto Screenshot.png">
+          <div class="proj1-details">
+            <h2>Virtual Assistant Krypto</h2>
+            <p>Built Using Python</p>
+            <button><a href="https://github.com/ManthanSiwach/Krypto_VirtualAssistant" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
@@ -154,7 +165,7 @@
       <div class="contact-content">
         <h2>Contact Me</h2>
         <p class="mail">
-          Get in touch with me <i class="fas fa-arrow-right"></i> manthansiwach2002@gmail.com
+          Get in touch with me <i class="fas fa-arrow-right"></i> <a href="mailto:manthansiwach2002@gmail.com" class = 'no-style'>manthansiwach2002@gmail.com</a>
         </p>
         <p class="links">Or find me on:</p>
         <a href="https://www.linkedin.com/in/manthan-siwach-b4a24a269/" target="blank"><i class="fab fa-linkedin">
@@ -172,3 +183,4 @@
 </body>
 
 </html>
+
