--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
                         </div>
                         <div class="progress-line"><span class="Css"></span></div>
                       
-                    </div>
+                      </div>
+                      <div class="bar"></div>
+                        <div class="info">
+                          <span>Javascript</span>
+                        </div>
+                        <div class="progress-line"><span class="Javascript"></span></div>
+                      
+                      </div>
                   </div>
                 </div>
               </div>
@@ -183,4 +190,3 @@
 </body>
 
 </html>
-
