--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#my-works">Projects</a></li>
           <li><a href="#contact-me">Contact</a></li>
-          <li><a href="Manthan Resume.pdf">Resume</a></li>
+          <li><a href="Manthan_Resume.pdf">Resume</a></li>
         </ul>
       </div>
     </nav>
